--- a/example/Aggregator.Example.WebHost/Views/_ViewImports.cshtml
+++ b/example/Aggregator.Example.WebHost/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Aggregator.ExampleWebHost
+@using Aggregator.Example.WebHost
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.SpaServices
