--- a/example/Aggregator.Example.WebHost/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/example/Aggregator.Example.WebHost/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">Aggregator.ExampleWebHost</a>
+            <a class='navbar-brand' [routerLink]="['/home']">Aggregator.Example.WebHost</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
