--- a/example/Aggregator.Example.WebHost/Views/Shared/_Layout.cshtml
+++ b/example/Aggregator.Example.WebHost/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Aggregator.ExampleWebHost</title>
+    <title>@ViewData["Title"] - Aggregator.Example.WebHost</title>
     <base href="~/" />
 
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
